# file_reader

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_setup.sh
src/: main.c
text_files/: example.txt  example2.txt
